--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -5,4 +5,16 @@
 .table-box{
   padding-left:40px;
   padding-right: 40px;
+  margin-top: 30px;
+}
+
+.container{
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 30px;
+}
+
+.dropdown{
+  display: flex;
+  align-content: flex-end;
 }
