--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -3,8 +3,17 @@
 }
 
 .table-box{
-  
   margin-top: 20px;
+}
+
+.table{
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-right: 20px;
+}
+
+.modalbox{
+  margin: 40px 50px;
 }
 
 .container{
